# paylogger_restapi_rs

./: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yaml
migrations/: 20221204030002_create_category.sql  20221204030047_create_log.sql  20221210080123_add_primarykey_and_autoincrement_in_categoryid.sql
src/: controllers.rs  main.rs  models.rs  services.rs
src/controllers/: auth_controllers.rs  category_controllers.rs  log_controllers.rs
src/models/: category_models.rs  log_models.rs  preflight_models.rs
src/services/: auth_services.rs  category_services.rs  db.rs  log_services.rs  validation_services.rs
