[package]
name = "paylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
sqlx = { version = "0.5.10", features = [ "mysql", "runtime-async-std-native-tls" ] }
dotenv = "*"
anyhow = "*"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json"] }

